<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.ghulam.musicalstructure.MainActivity">

    <TextView
        style="@style/IndexDescription"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/player_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView

                style="@style/CardViewButton"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/player"
                        android:layout_marginTop="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/player"
                        android:gravity="center_vertical"
                        android:textSize="24sp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/playlist_menu"
                style="@style/CardViewButton"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/playlist"
                        android:layout_marginTop="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/playlist"
                        android:gravity="center_vertical"
                        android:textSize="24sp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/albums_menu"
                style="@style/CardViewButton"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/albums1"
                        android:layout_marginTop="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/albums"
                        android:gravity="center_vertical"
                        android:textSize="24sp"
                        android:textAlignment="center"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/settings_menu"
                style="@style/CardViewButton"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/setting3"
                        android:layout_marginTop="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/setting"
                        android:gravity="center_vertical"
                        android:textSize="24sp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
